@@ -24,7 +24,6 @@ always available.
 <LI><A HREF="#accessconfig">AccessConfig</A>
 <LI><A HREF="#accessfilename">AccessFileName</A>
 <LI><A HREF="#addmodule">AddModule</A>
-<LI><A HREF="#addversionplatform">AddVersionPlatform</A>
 <LI><A HREF="#allowoverride">AllowOverride</A>
 <LI><A HREF="#authname">AuthName</A>
 <LI><A HREF="#authtype">AuthType</A>
@@ -78,6 +77,7 @@ always available.
 <LI><A HREF="#serverpath">ServerPath</A>
 <LI><A HREF="#serverroot">ServerRoot</A>
 <LI><A HREF="#serversignature">ServerSignature</A>
+<LI><A HREF="#servertokens">ServerTokens</A>
 <LI><A HREF="#servertype">ServerType</A>
 <LI><A HREF="#startservers">StartServers</A>
 <LI><A HREF="#threadsperchild">ThreadsPerChild</A>
@@ -178,52 +178,6 @@ This directive can be used to enable the use of those modules.  The
 server comes with a pre-loaded list of active modules; this list can
 be cleared with the <A HREF="#clearmodulelist">ClearModuleList</A>
 directive.<P><HR>
-
-<H2><A name="addversionplatform">AddVersionPlatform directive</A></H2>
-<!--%plaintext &lt;?INDEX {\tt AddVersionPlatform} directive&gt; -->
-<A
- HREF="directive-dict.html#Syntax"
- REL="Help"
-><STRONG>Syntax:</STRONG></A> AddVersionPlatform <EM>On|Off</EM><BR>
-<A
- HREF="directive-dict.html#Context"
- REL="Help"
-><STRONG>Context:</STRONG></A> server config <BR>
-<A
- HREF="directive-dict.html#Status"
- REL="Help"
-><STRONG>Status:</STRONG></A> core<BR>
-<A
- HREF="directive-dict.html#Compatibility"
- REL="Help"
-><STRONG>Compatibility:</STRONG></A> AddVersionPlatform is only available
- in Apache 1.3 and later
-
-<P>
-This directive controls whether the server's operating system platform
-will be identified in the <SAMP>Server</SAMP> response header
-field which is sent back to clients.  If enabled, a non-specific platform
-designation will be added to the identity string, as shown below:
-</P>
-<DL>
- <DT><CODE>AddVersionPlatform Off</CODE>
- </DT>
- <DD>Server sends: <SAMP>Server: Apache/1.3.0</SAMP>
- </DD>
- <DT><CODE>AddVersionPlatform On</CODE> (or not specified)
- </DT>
- <DD>Server sends: <SAMP>Server: Apache/1.3.0 (UNIX)</SAMP>
- </DD>
-</DL>
-<P>
-This setting applies to the entire server, and cannot be enabled or
-disabled on a virtualhost-by-virtualhost basis.
-</P>
-<P>
-By default, this information <EM>is</EM> included in the server
-identity string.
-</P>
-<HR>
 
 <H2><A name="allowoverride">AllowOverride directive</A></H2>
 <!--%plaintext &lt;?INDEX {\tt AllowOverride} directive&gt; -->
@@ -2496,6 +2450,56 @@ HREF="#servername">ServerName</A> of the serving virtual host, and
 the <SAMP>EMail</SAMP> setting additionally creates a "mailto:"
 reference to the <A HREF="#serveradmin">ServerAdmin</A> of the
 referenced document.
+
+<HR>
+
+<H2><A name="servertokens">ServerTokens directive</A></H2>
+<!--%plaintext &lt;?INDEX {\tt ServerTokens} directive&gt; -->
+<A
+ HREF="directive-dict.html#Syntax"
+ REL="Help"
+><STRONG>Syntax:</STRONG></A> ServerTokens <EM>Min|OS|Full</EM><BR>
+<A
+ HREF="directive-dict.html#Context"
+ REL="Help"
+><STRONG>Context:</STRONG></A> server config <BR>
+<A
+ HREF="directive-dict.html#Status"
+ REL="Help"
+><STRONG>Status:</STRONG></A> core<BR>
+<A
+ HREF="directive-dict.html#Compatibility"
+ REL="Help"
+><STRONG>Compatibility:</STRONG></A> ServerTokens is only available
+ in Apache 1.3 and later
+
+<P>
+This directive controls whether <SAMP>Server</SAMP> response header
+field which is sent back to clients includes a description of the generic
+OS-type of the server as well as information about compiled-in modules.
+</P>
+<DL>
+ <DT><CODE>ServerTokens Min[imal]</CODE>
+ </DT>
+ <DD>Server sends (e.g.): <SAMP>Server: Apache/1.3.0</SAMP>
+ </DD>
+ <DT><CODE>ServerTokens OS</CODE>
+ </DT>
+ <DD>Server sends (e.g.): <SAMP>Server: Apache/1.3.0 (UNIX)</SAMP>
+ </DD>
+ <DT><CODE>ServerTokens Full</CODE> (or not specified)
+ </DT>
+ <DD>Server sends (e.g.): <SAMP>Server: Apache/1.3.0 (UNIX) PHP/3.0 MyMod/1.2</SAMP>
+ </DD>
+</DL>
+<P>
+This setting applies to the entire server, and cannot be enabled or
+disabled on a virtualhost-by-virtualhost basis.
+</P>
+<P>
+By default, this information <EM>is</EM> included in the server
+identity string.
+</P>
 
 <HR>
 
