@@ -639,18 +639,17 @@ Allows additional information to be listed along with a specified module.
   configuration.
  </li>
  <LI><A
-      HREF="mod/core.html#addversionplatform"
+      HREF="mod/core.html#servertokens"
      ><STRONG>Including the operating system in the server
       identity</STRONG></A>
   <BR>
-  A new directive, <SAMP>AddVersionPlatform</SAMP>, allows the Webmaster
-  to change the value of
-  the <SAMP>Server</SAMP> response header field which is sent back
-  to clients.  The <SAMP>AddVersionPlatform</SAMP> directive controls
-  whether the server will
-  include a non-specific note in the server identity about the type of
-  operating system on which the server is running.  As of Apache 1.3, this
-  additional information is included by default.
+  A new directive, <SAMP>ServerTokens</SAMP>, allows the Webmaster
+  to change the value of the <SAMP>Server</SAMP> response header
+  field which is sent back to clients.  The <SAMP>ServerTokens</SAMP>
+  directive controls whether the server will include a non-specific
+  note in the server identity about the type of operating system on
+  which the server is running as well as included module information.
+  As of Apache 1.3, this additional information is included by default.
  </LI>
 </UL>
 
